Fix overflow for comments

--- a/src/styles/Comments.css
+++ b/src/styles/Comments.css
@@ -20,8 +20,7 @@
 
 .comment-text {
     overflow: scroll;
-    /* text-overflow: ellipsis;
-    margin-bottom: 5px; */
+    overflow-wrap: break-word;
 }
 
 .comment-div p {
